--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ff6b6b 0%, #feca57 100%);
             min-height: 100vh;
             color: #333;
         }
@@ -99,8 +99,8 @@
         .form-group input:focus,
         .form-group select:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #ee5a6f;
+            box-shadow: 0 0 0 3px rgba(238, 90, 111, 0.1);
         }
 
         .form-grid {
@@ -110,7 +110,7 @@
         }
 
         .btn {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ee5a6f 0%, #f79c42 100%);
             color: white;
             border: none;
             padding: 15px 30px;
@@ -126,7 +126,7 @@
 
         .btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 8px 25px rgba(238, 90, 111, 0.5);
         }
 
         .btn:active {
@@ -141,15 +141,15 @@
         }
 
         .btn-secondary {
-            background: linear-gradient(135deg, #74b9ff 0%, #0984e3 100%);
+            background: linear-gradient(135deg, #a29bfe 0%, #6c5ce7 100%);
         }
 
         .btn-success {
-            background: linear-gradient(135deg, #55efc4 0%, #00b894 100%);
+            background: linear-gradient(135deg, #00d2d3 0%, #01a3a4 100%);
         }
 
         .btn-warning {
-            background: linear-gradient(135deg, #fdcb6e 0%, #e17055 100%);
+            background: linear-gradient(135deg, #ffeaa7 0%, #fdcb6e 100%);
         }
 
         .status {
@@ -178,7 +178,7 @@
         }
 
         .wallet-info {
-            background: linear-gradient(135deg, #74b9ff 0%, #0984e3 100%);
+            background: linear-gradient(135deg, #a29bfe 0%, #6c5ce7 100%);
             color: white;
             padding: 15px;
             border-radius: 10px;
@@ -201,9 +201,9 @@
         }
 
         .pet-card:hover {
-            border-color: #667eea;
+            border-color: #ee5a6f;
             transform: translateY(-3px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 25px rgba(238, 90, 111, 0.2);
         }
 
         .pet-card h3 {
@@ -236,10 +236,10 @@
         }
 
         .marker {
-            background: #f8f9fa;
+            background: #fff5f5;
             padding: 10px;
             border-radius: 8px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #ee5a6f;
         }
 
         .marker label {
@@ -253,7 +253,7 @@
             width: 20px;
             height: 20px;
             border: 3px solid #f3f3f3;
-            border-top: 3px solid #667eea;
+            border-top: 3px solid #ee5a6f;
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
@@ -276,7 +276,7 @@
         }
 
         .match-result {
-            background: linear-gradient(135deg, #55efc4 0%, #00b894 100%);
+            background: linear-gradient(135deg, #00d2d3 0%, #01a3a4 100%);
             color: white;
             padding: 20px;
             border-radius: 15px;
